<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>busywait_priority_node</name>
  <version>0.0.0</version>
  <description>A ROS2 node with priority executor that has publisher-subscriber where subscriber busy waits longer than publisher period</description>
  <maintainer email="edpravee@uwaterloo.ca">guy</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>priority_executor</depend>
  <depend>simple_timer</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 