<?xml version="1.0"?>
<package format="3">
  <name>scalability_priority_test_node</name>
  <version>0.0.0</version>
  <description>A ROS 2 node for testing scalability with multiple publishers and subscribers using the priority executor.</description>
  <maintainer email="guy@example.com">guy</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>priority_executor</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 